Fix building chan_phone on big endian systems

A left over from the formats conversion (Corey Farrell).

ASTERISK-24458 #close
Review: https://reviewboard.asterisk.org/r/4117/

........

Merged revisions 426570 from http://svn.asterisk.org/svn/asterisk/branches/13


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@426573 65c4cc65-6c06-0410-ace0-fbb531ad65f3